# Document-Processing-Automation

./: .env.example  .gitignore  CLAUDE.md  README.md  prompt.md  pyproject.toml
config/: anomaly_rules.yaml  chart_of_accounts.csv  config.yaml  output.yaml
config/templates/: _default.yaml  acme-supplies.yaml
src/doc_automation/: __init__.py  __main__.py  audit.py  cli.py  config.py  dedup.py  outbox.py  pipeline.py
src/doc_automation/email_ingest/: __init__.py  base.py  gmail.py  imap.py  outlook.py
src/doc_automation/extraction/: __init__.py  extractor.py  invoice.py  strategies.py  template.py  utils.py
src/doc_automation/output/: __init__.py  base.py  csv_writer.py  excel.py  sheets.py
src/doc_automation/parsing/: __init__.py  document.py  image.py  ocr.py  pdf.py
src/doc_automation/validation/: __init__.py  anomaly.py  coa.py
tests/: conftest.py  test_cli.py  test_config.py  test_dedup.py  test_e2e.py  test_email_ingest.py  test_extraction.py  test_output.py  test_parsing.py  test_pipeline.py  test_validation.py
